# 3d-auv-simulator

./: ProjectHome.md  README.md
CAD/: BBAUV V3.STL  Completed Flare - Gold Ball-2.STL  Completed Flare - Golf Ball Stand-1.STL  Completed Flare.SLDASM  Gold Ball.SLDPRT  Golf Ball Stand.SLDPRT  Red Buoy.SLDPRT  Red Buoy.STL
simulator/: README.txt  UWModel.sha  main.py  underwater.sha  wave.sha
simulator/assets/models/: box1.egg  fish3-3.egg  fish5.egg  fish7-3.egg  fish8-3.egg  fish9-4.egg  stand.egg
simulator/catkin_workspace/devel/: .catkin  .rosinstall  setup.sh
simulator/catkin_workspace/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
simulator/catkin_workspace/devel/lib/pkgconfig/: ros_image.pc
simulator/catkin_workspace/devel/share/ros_image/cmake/: ros_imageConfig.cmake
simulator/catkin_workspace/src/ros_image/: CMakeLists.txt
simulator/catkin_workspace/src/ros_image/scripts/: image_listener.py
simulator/catkin_workspace/src/ros_image/scripts/rosManager/: RosManager.py  __init__.py  init_roscore.sh
simulator/docs/: readme.txt  readme.txt~
simulator/eventManager/: EventManager.py  __init__.py
simulator/guiManager/: Connections.py  Gui.py  GuiThread.py  __init__.py
simulator/inputManager/: KeyboardManager.py  MouseHandler.py  __init__.py
simulator/optionManager/: LoadScene.py  SaveScene.py  __init__.py
simulator/optionManager/savedFiles/: boxes.xml  pandaPrimitives.xml  scene1.xml~
simulator/pandaManager/: Grid.py  ModelNode.py  PandaScene.py  Pool.py  SceneGraphManager.py  __init__.py
simulator/rosManager/: RosManager.py  init_roscore.sh
simulator/utils/: Globals.py  __init__.py
vision_gui/: .vision_gui.cpp.swp  CMakeLists.txt  README.txt  controller.msg  flare_vision.py  package.xml  vision.ui  vision_gui.cpp  vision_gui.h
